# backend-journey

./: pyproject.toml
config/: celery.py  settings.py  urls.py
users/: forms.py  models.py  tasks.py  urls.py  views.py
users/management/commands/: create_dynamodb_tables.py
users/templates/users/: user_detail.html  user_form.html  user_list.html
