[project]
name = "django-exp"
version = "0.1.0"
description = ""
authors = [
    {name = "temm-dev",email = "temm-dev@proton.me"}
]
requires-python = "^3.12"
dependencies = [
    "asgiref (>=3.11.1,<4.0.0)",
    "django (>=6.0.2,<7.0.0)",
    "django-filter (>=25.2,<26.0)",
    "djangorestframework (>=3.16.1,<4.0.0)",
    "djangorestframework-jsonapi (>=8.1.0,<9.0.0)",
    "inflection (>=0.5.1,<0.6.0)",
    "sqlparse (>=0.5.5,<0.6.0)",
    "pynamodb (>=6.1.0,<7.0.0)",
    "boto3 (>=1.42.56,<2.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
